# seo-business

./: .gitignore  .vercelignore  AGENTS.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/api/audit/: route.ts
app/api/audit/batch/: route.ts
app/api/audit/jobs/[jobId]/: route.ts
app/audit/: page.tsx
app/audit/[id]/: page.tsx
app/how-to-get-found-on-google-in-cornwall/: page.tsx
app/seo-cornwall/: page.tsx
app/seo-for-service-businesses-in-surrey/: page.tsx
app/seo-surrey/: page.tsx
audit-mac-app/: .gitignore  index.html  package-lock.json  package.json
audit-mac-app/src/: App.tsx  styles.css
audit-mac-app/src-tauri/: Cargo.toml  tauri.conf.json
audit-mac-app/src-tauri/capabilities/: default.json
audit-mac-app/src-tauri/src/: lib.rs  main.rs
audit-mac-app/src/components/: DropZone.tsx  JobProgress.tsx  ReportLinks.tsx  Settings.tsx  UrlInput.tsx
audit-mac-app/src/lib/: api.ts  parseUrls.ts  types.ts
components/: guide-page.tsx  home-page.tsx  json-ld.tsx  location-page.tsx  site-footer.tsx  site-header.tsx
components/ui/: button.tsx  card.tsx
lib/: schema.ts  site.ts
lib/audit/: api-headers.ts  batch-store.ts  crawl-url.ts  extract-page-data.ts  generate-audit.ts  process-batch-job.ts  score-page.ts  store.ts  types.ts  utils.ts
prompts/: audit-report-prompt.md  audit-system-prompt.md  landing-page-rewrite-prompt.md
skills/: ai-seo.md  humanizer.md  seo-audit.md
