[package]
name = "better-search-audit"
version = "0.1.0"
description = "Better Search Audit Machine"
authors = ["Better Search"]
edition = "2021"

[lib]
name = "better_search_audit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
